--- a/about-us.html
+++ b/about-us.html
@@ -62,7 +62,7 @@
     </p>
   </section>
   <hr class="separator">
-  <section class="section mini-section">
+  <section class="section mini-section fly fly--5-6">
     <h2 class="section__title">Наша миссия</h2>
     <p class="section__subtitle">
       Мы верим, что забота о себе должна быть доступной, удобной и персонализированной.
@@ -128,7 +128,7 @@
   <div class="footer__copyright logo">
     BEAUTIQUE 2025
   </div>
-  <p class="footer__author">Гайдаржий Виктория</p>
+  <p class="footer__author">VICTORIA GAIDARJI</p>
 </footer>
 <div class="modal" id="bookingModal" aria-hidden="true">
   <div class="modal__overlay" data-close></div>
