--- a/contacts.html
+++ b/contacts.html
@@ -91,14 +91,14 @@
     </ul>
   </section>
   <hr class="separator">
-  <section class="section mini-section feedback-form">
+  <section class="section mini-section">
     <h2 class="section__title">Форма обратной связи</h2>
     <p class="section__subtitle">
       Если у вас есть вопросы или предложения, заполните форму ниже, и мы свяжемся с вами в ближайшее время.
     </p>
     <form
       action="#"
-      class="form"
+      class="form fly fly--5-6 fly-form"
     >
       <div class="form__fields contact__form-fields">
         <label class="form__field">
@@ -213,7 +213,7 @@
   <div class="footer__copyright logo">
     BEAUTIQUE 2025
   </div>
-  <p class="footer__author">Гайдаржий Виктория</p>
+  <p class="footer__author">VICTORIA GAIDARJI</p>
 </footer>
 <div class="modal" id="bookingModal" aria-hidden="true">
   <div class="modal__overlay" data-close></div>
