--- a/index.html
+++ b/index.html
@@ -58,12 +58,12 @@
         <h1 class="section__title hero__title">Совершенство,</h1>
         <p class="section__subtitle hero__subtitle">созданное для вас.</p>
         <button
-          class="button book-button"
+          class="button book-button fly fly--1"
           type="button"
         >
           Записаться сейчас
         </button>
-        <p class="hero__description">
+        <p class="hero__description fly fly--2">
           <span class="h3">Ваш</span> сервис красоты
         </p>
       </header>
@@ -273,10 +273,10 @@
       <h2 class="section__title benefits__title">
         Почему нам доверяют
       </h2>
-      <p class="section__subtitle benefits__subtitle">
+      <p class="section__subtitle benefits__subtitle fly fly--3">
         Наши преимущества
       </p>
-      <ol class="benefits__list">
+      <ol class="benefits__list fly fly--4">
         <li class="benefits__item">
           <div class="benefits__item-number h1">1</div>
           <div class="benefits__item-info">
@@ -369,7 +369,7 @@
       </address>
       <form
         action="#"
-        class="form contact__form "
+        class="form contact__form fly fly--5-6"
       >
         <h2 class="section__title contact__form-title">Скидка −20% на первую запись!</h2>
         <p class="section__subtitle contact__form-subtitle">Небольшой подарок для тех, кто выбирает себя и доверяет нам свою красоту.</p>
@@ -408,7 +408,7 @@
     <div class="footer__copyright logo">
       BEAUTIQUE 2025
     </div>
-    <p class="footer__author">Гайдаржий Виктория</p>
+    <p class="footer__author">VICTORIA GAIDARJI</p>
   </footer>
   <div class="modal" id="bookingModal" aria-hidden="true">
     <div class="modal__overlay" data-close></div>
