--- a/masters.html
+++ b/masters.html
@@ -265,7 +265,7 @@
   <div class="footer__copyright logo">
     BEAUTIQUE 2025
   </div>
-  <p class="footer__author">Гайдаржий Виктория</p>
+  <p class="footer__author">VICTORIA GAIDARJI</p>
 </footer>
 <div class="modal" id="bookingModal" aria-hidden="true">
   <div class="modal__overlay" data-close></div>
