--- a/reviews.html
+++ b/reviews.html
@@ -60,23 +60,18 @@
   <hr class="separator">
   <section class="section mini-section">
     <h2 class="section__title">Что говорят о нас</h2>
-  </section>
-  <hr class="separator">
-  <section class="section mini-section">
-    <h2 class="section__title">Оставьте свой отзыв</h2>
-    <p class="section__subtitle">Мы будем рады услышать ваше мнение! Заполните форму ниже, и ваш отзыв появится на нашей платформе.</p>
     <ul class="grid__list">
       <li class="grid__item">
         <p class="grid__item-title">Мария Попова</p>
         <p class="grid__item-text">"Очень удобная платформа! Нашла отличного визажиста, записалась за пару минут и осталась очень довольна результатом. Рекомендую Beautique всем!"</p>
         <p class="grid__item-text">★★★★★</p>
       </li>
-      <li class="grid__item">
+      <li class="grid__item fly fly--9">
         <p class="grid__item-title">Антон Полежайкин</p>
         <p class="grid__item-text">"С помощью Beautique я легко записался на массаж и косметологические процедуры. Все мастера профессиональные, сервис на высшем уровне."</p>
         <p class="grid__item-text">★★★★☆</p>
       </li>
-      <li class="grid__item">
+      <li class="grid__item fly fly--10">
         <p class="grid__item-title">Елена Стоянова</p>
         <p class="grid__item-text">"Мне нравится, что можно читать отзывы других клиентов и выбирать мастера по рейтингу. Запись через сайт простая и удобная."</p>
         <p class="grid__item-text">★★★★★</p>
@@ -91,29 +86,24 @@
         <p class="grid__item-text">"Ранее приходилось тратить много времени на поиск мастеров. Теперь все в одном месте — удобно, просто и безопасно."</p>
         <p class="grid__item-text">★★★★☆</p>
       </li>
-      <li class="grid__item">
+      <li class="grid__item fly fly--11">
         <p class="grid__item-title">Наталья Каплина</p>
         <p class="grid__item-text">"Beautique помогает экономить время и силы. Все мастера проверенные, а отзывы помогают сделать правильный выбор. Отличный сервис!"</p>
         <p class="grid__item-text">★★★★★</p>
       </li>
     </ul>
-    <p class="section__subtitle">Все отзывы проходят модерацию перед публикацией, чтобы сохранить достоверность и полезность информации.</p>
-  </section>
+    </section>
   <hr class="separator">
-  <section class="section mini-section">
-    <h2 class="section__title">Почему важно оставлять отзывы</h2>
+  <section class="section mini-section reviews-form">
+    <h2 class="section__title">Оставьте свой отзыв</h2>
     <p class="section__subtitle">
-      Ваш опыт помогает другим клиентам делать правильный выбор.
-      Мастера получают ценные рекомендации для улучшения качества услуг.
-      Мы становимся лучше благодаря вашим комментариям.
+      Мы будем рады услышать ваше мнение! Заполните форму ниже, и ваш отзыв появится на нашей платформе.
     </p>
-  </section>
-  <section class="section reviews-form">
     <form
       action="#"
-      class="form"
+      class="form fly fly--5-6 fly-form"
     >
-      <p class="section__subtitle contact__form-subtitle">Небольшой подарок для тех, кто выбирает себя и доверяет нам свою красоту.</p>
+      <p class="section__subtitle contact__form-subtitle"></p>
       <div class="form__fields contact__form-fields">
         <label class="form__field">
           <span class="form__label">Ваше имя *</span>
@@ -151,7 +141,7 @@
           </select>
         </label>
         <label class="form__field">
-          <span class="form__label">Ретинг</span>
+          <span class="form__label">Рейтинг</span>
           <select
             name="master"
             class="form__select"
@@ -183,13 +173,23 @@
         Отправить
       </button>
     </form>
+    <p class="section__subtitle">Все отзывы проходят модерацию перед публикацией, чтобы сохранить достоверность и полезность информации.</p>
+  </section>
+  <hr class="separator">
+  <section class="section mini-section fly fly--7-8">
+    <h2 class="section__title">Почему важно оставлять отзывы</h2>
+    <p class="section__subtitle">
+      Ваш опыт помогает другим клиентам делать правильный выбор.
+      Мастера получают ценные рекомендации для улучшения качества услуг.
+      Мы становимся лучше благодаря вашим комментариям.
+    </p>
   </section>
 </main>
 <footer class="footer container">
   <div class="footer__copyright logo">
     BEAUTIQUE 2025
   </div>
-  <p class="footer__author">Гайдаржий Виктория</p>
+  <p class="footer__author">VICTORIA GAIDARJI</p>
 </footer>
 <div class="modal" id="bookingModal" aria-hidden="true">
   <div class="modal__overlay" data-close></div>
