--- a/services.html
+++ b/services.html
@@ -58,7 +58,7 @@
     <p class="section__title service__subtitle">Ваши любимые beauty-процедуры в одном месте</p>
   </section>
   <hr class="separator">
-  <section class="section service">
+  <section class="section service fly fly--12">
     <h2 class="section__title service__title">Макияж</h2>
     <ul class="service__list">
       <li class="service__item">
@@ -98,7 +98,7 @@
     </button>
   </section>
   <hr class="separator">
-  <section class="section service">
+  <section class="section service fly fly--13">
     <h2 class="section__title service__title">Брови</h2>
     <ul class="service__list">
       <li class="service__item">
@@ -134,7 +134,7 @@
     </button>
   </section>
   <hr class="separator">
-  <section class="section service">
+  <section class="section service fly fly--14">
     <h2 class="section__title service__title">Маникюр</h2>
     <ul class="service__list">
       <li class="service__item">
@@ -174,7 +174,7 @@
     </button>
   </section>
   <hr class="separator">
-  <section class="section service">
+  <section class="section service fly fly--15">
     <h2 class="section__title service__title">Косметология</h2>
     <ul class="service__list">
       <li class="service__item">
@@ -214,7 +214,7 @@
     </button>
   </section>
   <hr class="separator">
-  <section class="section service">
+  <section class="section service fly fly--12">
     <h2 class="section__title service__title">Массаж</h2>
     <ul class="service__list">
       <li class="service__item">
@@ -258,7 +258,7 @@
   <div class="footer__copyright logo">
     BEAUTIQUE 2025
   </div>
-  <p class="footer__author">Гайдаржий Виктория</p>
+  <p class="footer__author">VICTORIA GAIDARJI</p>
 </footer>
 <div class="modal" id="bookingModal" aria-hidden="true">
   <div class="modal__overlay" data-close></div>
