--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
           <img
             class="staff__item-image"
             src="./images/masters/master-1.png"
-            alt=""
+            alt="Массажист Алина"
             width="363"
             height="363"
             loading="lazy"
@@ -199,7 +199,7 @@
           <img
             class="staff__item-image"
             src="./images/masters/master-2.png"
-            alt=""
+            alt="Визажист Елена"
             width="363"
             height="363"
             loading="lazy"
@@ -212,7 +212,7 @@
           <img
             class="staff__item-image"
             src="./images/masters/master-3.png"
-            alt=""
+            alt="Бровист Ирина"
             width="363"
             height="363"
             loading="lazy"
@@ -225,7 +225,7 @@
           <img
             class="staff__item-image"
             src="./images/masters/master-4.png"
-            alt=""
+            alt="Маникюрист Анна"
             width="363"
             height="363"
             loading="lazy"
@@ -238,7 +238,7 @@
           <img
             class="staff__item-image"
             src="./images/masters/master-5.png"
-            alt=""
+            alt="Косметолог Элина"
             width="363"
             height="363"
             loading="lazy"
@@ -251,7 +251,7 @@
           <img
             class="staff__item-image"
             src="./images/masters/master-6.png"
-            alt=""
+            alt="Визажист Татьяна"
             width="363"
             height="363"
             loading="lazy"
