--- a/services.html
+++ b/services.html
@@ -1,10 +1,10 @@
 <!doctype html>
-<html lang="en">
+<html lang="ru">
 <head>
   <meta charset="UTF-8">
   <meta
     name="viewport"
-    content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
+    content="width=device-width, initial-scale=1.0"
   >
   <meta
     http-equiv="X-UA-Compatible"
@@ -250,9 +250,9 @@
     </button>
   </section>
   <hr class="separator">
-  <section class="section service">
+  <div class="section service">
     <p class="section__subtitle">Каждая услуга — отражение нашего стремления к совершенству.</p>
-  </section>
+  </div>
 </main>
 <footer class="footer container">
   <div class="footer__copyright logo">
@@ -278,14 +278,18 @@
       </label>
 
       <label class="form__field">
-        <span class="form__label">Услуга</span>
-        <select class="form__select" id="serviceSelect" required></select>
-      </label>
+          <span class="form__label">Услуга</span>
+          <select class="form__select" id="serviceSelect" required>
+            <option value="" disabled selected>Выберите услугу</option>
+          </select>
+        </label>
 
-      <label class="form__field">
-        <span class="form__label">Мастер</span>
-        <select class="form__select" id="masterSelect" required></select>
-      </label>
+        <label class="form__field">
+          <span class="form__label">Мастер</span>
+          <select class="form__select" id="masterSelect" required disabled>
+            <option value="" selected hidden>Выберите мастера</option>
+          </select>
+        </label>
 
       <label class="form__field">
         <span class="form__label">Дата</span>
